@@ -3,10 +3,10 @@ dnl $Id$
 
 # Init.
 AC_PREREQ(2.57)
-AC_INIT(libticalcs2, 0.0.3, [tilp-users@lists.sourceforge.net])
+AC_INIT(libticalcs2, 0.0.4, [tilp-users@lists.sourceforge.net])
 
 dnl Release versioning info
-VERSION="0.0.3"
+VERSION="0.0.4"
 AC_SUBST(VERSION)
 
 dnl Library version.
@@ -17,7 +17,7 @@ dnl    reset 'revision' and increment 'age'.
 dnl  * If you changed/removed things from the api, increment 'current',
 dnl    reset 'revision' and reset 'age'.
 LT_CURRENT=0
-LT_REVISION=3
+LT_REVISION=4
 LT_AGE=0
 LT_LIBVERSION="$LT_CURRENT:$LT_REVISION:$LT_AGE"
 AC_SUBST(LT_LIBVERSION, $LT_CURRENT:$LT_REVISION:$LT_AGE)
@@ -60,7 +60,7 @@ AM_CONDITIONAL(USE_DOCGEN, test "$TFDOCGEN" != "no")
 AM_GNU_GETTEXT
 AM_GNU_GETTEXT_VERSION(0.14.5)
 
-PKG_CHECK_MODULES(TICABLES, ticables2 >= 0.0.1)
+PKG_CHECK_MODULES(TICABLES, ticables2 >= 0.0.5)
 AC_SUBST(TICABLES_CFLAGS)
 AC_SUBST(TICABLES_LIBS)
 
