@@ -719,14 +719,14 @@ TIEXPORT int TICALL ticalcs_calc_recv_backup2(CalcHandle* handle, const char *fi
 	case CALC_TI86:
 	case CALC_TI92:
 		// true backup capability
-		content1 = tifiles_content_create_backup();
+		content1 = tifiles_content_create_backup(handle->model);
 		TRYF(ticalcs_calc_recv_backup(handle, content1));
 		TRYF(tifiles_file_write_backup(filename, content1));
 		TRYF(tifiles_content_delete_backup(content1));
 		break;
 	default:
 		// pseudo-backup
-		content2 = tifiles_content_create_regular();
+		content2 = tifiles_content_create_regular(handle->model);
 		TRYF(ticalcs_calc_recv_backup(handle, (BackupContent *)content2));
 		TRYF(tifiles_file_write_regular(filename, content2, NULL));
 		TRYF(tifiles_content_delete_regular(content2));
@@ -841,7 +841,7 @@ TIEXPORT int TICALL ticalcs_calc_recv_var2(CalcHandle* handle, CalcMode mode,
 	if(handle->busy)
 		return ERR_BUSY;
 
-	content = tifiles_content_create_regular();
+	content = tifiles_content_create_regular(handle->model);
 	TRYF(ticalcs_calc_recv_var(handle, mode, content, vr));
 	TRYF(tifiles_file_write_regular(filename, content, NULL));
 	TRYF(tifiles_content_delete_regular(content));
@@ -905,7 +905,7 @@ TIEXPORT int TICALL ticalcs_calc_recv_var_ns2(CalcHandle* handle, CalcMode mode,
 	if(handle->busy)
 		return ERR_BUSY;
 
-	content = tifiles_content_create_regular();
+	content = tifiles_content_create_regular(handle->model);
 	TRYF(ticalcs_calc_recv_var_ns(handle, mode, content, vr));
 	TRYF(tifiles_file_write_regular(filename, content, NULL));
 	TRYF(tifiles_content_delete_regular(content));
@@ -966,7 +966,7 @@ TIEXPORT int TICALL ticalcs_calc_recv_flash2(CalcHandle* handle, const char* fil
 	if(handle->busy)
 		return ERR_BUSY;
 
-	content = tifiles_content_create_flash();
+	content = tifiles_content_create_flash(handle->model);
 	TRYF(ticalcs_calc_recv_flash(handle, content, vr));
 	TRYF(tifiles_file_write_flash(filename, content));
 	TRYF(tifiles_content_delete_flash(content));
@@ -1121,7 +1121,7 @@ TIEXPORT int TICALL ticalcs_calc_recv_cert2(CalcHandle* handle, const char* file
 		memcpy(e, "crt", 3);
 		f = fopen(basename, "wb");
 
-		content = tifiles_content_create_flash();
+		content = tifiles_content_create_flash(handle->model);
 		TRYF(ticalcs_calc_recv_cert(handle, content));
 
 		fwrite(content->data_part, content->data_length, 1, f);
@@ -1133,7 +1133,7 @@ TIEXPORT int TICALL ticalcs_calc_recv_cert2(CalcHandle* handle, const char* file
 	else
 	{
 		// .??q format as generated by TI
-		content = tifiles_content_create_flash();
+		content = tifiles_content_create_flash(handle->model);
 		TRYF(ticalcs_calc_recv_cert(handle, content));
 		TRYF(tifiles_file_write_flash(filename, content));
 		TRYF(tifiles_content_delete_flash(content));
